name:                servant
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/servant#readme
license:             BSD3
license-file:        LICENSE
author:              Helen Wallace
maintainer:          example@example.com
copyright:           2017 Helen Wallace
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , mongoDB
                     , bson-generic
                     , bson
  default-language:    Haskell2010

executable servant-exe
  hs-source-dirs:      app
  main-is:             Lib.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , servant
                     , mongoDB
                     , bson-generic
                     , bson
  default-language:    Haskell2010

test-suite servant-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , servant
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/servant
